Update storage provider file APIs
